--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,6 @@
-name: 'Container Action Template'
-description: 'Get started with Container actions'
-author: 'GitHub'
-inputs: 
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+name: 'NodeJS code linter'
+description: 'Automatically lints your code'
+author: 'MarvinJWendt'
 runs:
   using: 'docker'
   image: 'Dockerfile'
