--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Node Code Linter'
-description: 'Automatically lints your code'
+name: 'Node Code Formatter'
+description: 'Runs `npm run lint` on file change.'
 author: 'MarvinJWendt'
 branding:
   icon: award
