:globe_with_meridians: Change description

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Node Code Formatter"
-description: "Runs `npm run lint` on file change."
+description: "Runs `npm run format` on file change."
 author: "MarvinJWendt"
 branding:
   icon: award
